Stream.toList not available in 11